--- a/iPower.Phone/App.xaml
+++ b/iPower.Phone/App.xaml
@@ -1,12 +1,14 @@
 ﻿<Application
-    x:Class="iPower.Phone.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:Converter="clr-namespace:iPower.Phone.Converter"
+    x:Class="iPower.Phone.App"
+    >
 
     <!--Application Resources-->
     <Application.Resources>
+        <Converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <local:LocalizedStrings xmlns:local="clr-namespace:iPower.Phone" x:Key="LocalizedStrings"/>
         <DataTemplate x:Key="DataTemplateChannel">
             <Grid Margin="5">
@@ -25,14 +27,15 @@
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="DataTemplateHistory">
-            <Grid Margin="5" Width="340">
+            <Grid Margin="5" Width="400">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="{Binding CoverImageUrl}" Width="120"/>
-                    <StackPanel Margin="10,0,0,0">
-                        <TextBlock Width="210" Text="{Binding ArtistTitle}" TextWrapping="Wrap"/>
-                        <TextBlock Width="210" Text="{Binding SongTitle}"  TextWrapping="Wrap"  Margin="0,5,0,0"/>
-                        <TextBlock Width="210" Text="{Binding SongPlayedAtVisible}"  TextWrapping="Wrap" Margin="0,5,0,0"/>
+                    <StackPanel Margin="10,0,0,0" Width="222" >
+                        <TextBlock  Text="{Binding ArtistTitle}" TextWrapping="Wrap" HorizontalAlignment="Left"/>
+                        <TextBlock  Text="{Binding SongTitle}"  TextWrapping="Wrap"  Margin="0,5,0,0" HorizontalAlignment="Left"/>
+                        <TextBlock  Text="{Binding SongPlayedAtVisible}"  TextWrapping="Wrap" Margin="0,5,0,0" HorizontalAlignment="Left"/>
                     </StackPanel>
+                    <Image Source="/Assets/Lyrics.png" Width="48" Height="48" Visibility="{Binding HasLyrics, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}"/>
                 </StackPanel>
             </Grid>
         </DataTemplate>
